--- a/scss/main.scss
+++ b/scss/main.scss
@@ -81,6 +81,7 @@ body {
 }
 
 .main {
+	overflow: hidden;
 	&__aboutus {
 		padding: 115px 14%;
 		text-align: center;
